submission/feedback-api.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
      - name: feedback-api
        image: blspr/feedback-api:submission
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: db-volume
          mountPath: "/usr/db"
        livenessProbe:
          httpGet:
            path: /health
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: feedback-db
